[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/menu_bg.jpg" type="Texture" id=1]
[ext_resource path="res://RabbitFrames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/logo.png" type="Texture" id=3]
[ext_resource path="res://FarmerFrames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://ColorButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu.gd" type="Script" id=6]
[ext_resource path="res://assets/cloud1.png" type="Texture" id=7]
[ext_resource path="res://assets/cloud2.png" type="Texture" id=8]
[ext_resource path="res://assets/carrot.png" type="Texture" id=9]
[ext_resource path="res://Cloud.gd" type="Script" id=10]

[node name="Menu" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 960, 305 )
texture = ExtResource( 3 )

[node name="Rabbit" type="AnimatedSprite" parent="."]
position = Vector2( 1560, 546 )
frames = ExtResource( 2 )
animation = "idle"
frame = 1
playing = true
flip_h = true

[node name="Farmer" type="AnimatedSprite" parent="."]
position = Vector2( 360, 493 )
scale = Vector2( 0.75, 0.75 )
frames = ExtResource( 4 )
playing = true

[node name="RabbitButton" parent="." instance=ExtResource( 5 )]
margin_left = 1281.0
margin_top = 693.0
margin_right = 1840.0
margin_bottom = 848.0

[node name="VsButton" parent="." instance=ExtResource( 5 )]
self_modulate = Color( 1, 0.431373, 0, 1 )
margin_left = 681.0
margin_top = 693.0
margin_right = 1240.0
margin_bottom = 848.0
label = "Play VS"
color = Color( 1, 0.431373, 0, 1 )

[node name="FarmerButton" parent="." instance=ExtResource( 5 )]
self_modulate = Color( 0.678431, 0.117647, 0.12549, 1 )
margin_left = 80.0
margin_top = 693.0
margin_right = 639.0
margin_bottom = 848.0
label = "Play as Farmer"
color = Color( 0.678431, 0.117647, 0.12549, 1 )

[node name="Cloud1" type="Sprite" parent="."]
position = Vector2( 349, 175 )
texture = ExtResource( 7 )
script = ExtResource( 10 )

[node name="Cloud2" type="Sprite" parent="."]
position = Vector2( 1634, 287 )
texture = ExtResource( 8 )
script = ExtResource( 10 )

[node name="Carrot" type="Sprite" parent="."]
position = Vector2( 960, 599 )
rotation = 1.47829
texture = ExtResource( 9 )

[connection signal="pressed" from="RabbitButton" to="." method="_on_RabbitButton_pressed"]
[connection signal="pressed" from="VsButton" to="." method="_on_VsButton_pressed"]
[connection signal="pressed" from="FarmerButton" to="." method="_on_FarmerButton_pressed"]
